src/App.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');


.App {
  text-align: center;
  font-family: 'Lato', sans-serif;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}



@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#nav {
  padding-left: 5%;
  padding-right: 5%;
  background-color: #AA1945;
}

#logo {
  color: white;
  margin-right: 20px;
}

@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap');

#logo-text {
  color: white;
  font-family: 'Caveat', cursive;
}

#friends-container {
  row-gap: 14px;

}

.friends-container {
  row-gap: 14px;
  
}

#about-me {
  background-color: white;
  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
}


ul {
  list-style-type: none;
}

.vertLine {
            border-left: 1px solid rgb(230, 230, 230);


}

